[package]
name = "hpke"
version = "0.1.0"
edition = "2021"

[dependencies]
hpke = "0.13.0"
rand = "0.9.1"
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }
hex = "0.4.3"
clap = { version = "4.4.6", features = ["derive"] }

[[bin]]
name = "sender"
path = "src/bin/sender.rs"

[[bin]]
name = "receiver"
path = "src/bin/receiver.rs"
