[package]
name = "tokio-exercise"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tokio-phase1"
path = "src/bin/phase1.rs"

[[bin]]
name = "tokio-phase2"
path = "src/bin/phase2.rs"  

[[bin]]
name = "tokio-phase3"
path = "src/bin/phase3.rs"

[[bin]]
name = "tokio-phase4"
path = "src/bin/phase4.rs"

[[bin]]
name = "tokio-phase5"
path = "src/bin/phase5.rs"

[[bin]]
name = "tokio-phase6"
path = "src/bin/phase6.rs"

[[bin]]
name = "tokio-phase7"
path = "src/bin/phase7.rs"

[dependencies]
# "full" 기능은 모든 기능(파일시스템, 네트워킹, 시간 등)을 포함합니다.
# 실제 프로덕션에서는 필요한 기능만 켜서 빌드 속도를 최적화하지만, 학습용으로는 full이 편합니다.
tokio = { version = "1", features = ["full"] }

tokio-util = { version = "0.7", features = ["codec", "net"] } # codec 기능 필수
futures = "0.3" # StreamExt, SinkExt 트레이트 사용을 위해 필요